<resources>
    <string name="app_name">Instagram</string>
    <string name="username">username</string>
    <string name="login">Log in</string>
    <string name="password">password</string>
    <string name="take_a_picture">Take a Picture</string>
    <string name="description">Description...</string>
    <string name="posted_image">Posted Image</string>
    <string name="submit">Submit</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="compose">Compose</string>
    <string name="profile">Profile</string>
    <string name="instagramlogo">InstagramLogo</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="email_address">email address</string>
    <string name="user_profilepic">user ProfilePic</string>
    <string name="DEFAULT_PROFILE_PIC">"https://t4.ftcdn.net/jpg/00/64/67/63/240_F_64676383_LdbmhiNM6Ypzb3FM4PPuFP9rHe7ri8Ju.jpg"</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_profile_photo">Change profile photo</string>
    <string name="name">Name</string>
    <string name="bio">Bio</string>
    <string name="usernamecap">Username</string>
    <string name="done">Done</string>
    <string name="log_out">Log out</string>
    <string name="post">Post</string>
    <string name="camera">camera</string>
    <string name="like_button">like Button</string>
    <string name="comment_button">comment button</string>

</resources>